# stsci-package-template

./: .gitignore  .pre-commit-config.yaml  AI_POLICY.md  README.md  cookiecutter.json  setup.cfg  towncrier.toml  tox.ini
.github/: dependabot.yml  labeler.yml  release.yml
.github/workflows/: label.yml  sphinx-deploy.yml  tests.yml
changes/: README.md
docs/: README.md  conf.py  github.rst  index.rst  options.rst
other-package/: cookiecutter.json
other-package/hooks/: post_gen_project.py
other-package/{{ cookiecutter.package_name }}/: .readthedocs.yaml  README.md  towncrier.toml
other-package/{{ cookiecutter.package_name }}/.github/: CODEOWNERS  labeler.yml  pull_request_template.md  release.yml
other-package/{{ cookiecutter.package_name }}/.github/workflows/: changelog.yml  sphinx-deploy.yml
other-package/{{ cookiecutter.package_name }}/docs/: Makefile  README.md  conf.py  index.rst  requirements.txt
python-package/: cookiecutter.json
python-package/hooks/: post_gen_project.py  pre_gen_project.py
python-package/{{ cookiecutter.package_name }}/: .pre-commit-config.yaml  .readthedocs.yaml  .ruff.toml  AI_POLICY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  TESTING.md  noxfile.py  pyproject.toml  setup.py  tox.toml
python-package/{{ cookiecutter.package_name }}/.github/: CODEOWNERS  ISSUE_TEMPLATE  actionlint.yml  dependabot.yml
python-package/{{ cookiecutter.package_name }}/.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.yaml
python-package/{{ cookiecutter.package_name }}/.github/workflows/: build.yml  label.yml  sphinx-deploy.yml  tests.yml  update.yml
python-package/{{ cookiecutter.package_name }}/changes/: README.md
python-package/{{ cookiecutter.package_name }}/docs/: README.md  conf.py  index.rst
python-package/{{ cookiecutter.package_name }}/tests/: test_{{ cookiecutter.package_name }}.py
templates/: .pre-commit-config.yaml  LICENSE.txt  towncrier.toml
templates/.github/: CODEOWNERS  actionlint.yml  labeler.yml  pull_request_template.md
templates/.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.yaml
templates/.github/workflows/: changelog.yml  label.yml  sphinx-deploy.yml  update.yml
tests/: test_template_combinations.py
tools/: supported_pythons.py
