{%- if cookiecutter.python_build_backend == "hatchling" %}
[build-system]
requires = [
  "hatchling>=1.20",
  "hatch-vcs",
{%- if cookiecutter.python_c_extensions %}
  "hatch-c>=0.2.2",
{%- endif %}
]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "release-branch-semver"
{%- if cookiecutter.python_c_extensions %}
[tool.hatch.build]
artifacts = [
  "src/**/*.dll",
  "src/**/*.dylib",
  "src/**/*.so",
]

[tool.hatch.build.sources]
src = "src/"

[tool.hatch.build.targets.sdist]
packages = ["src/{{ cookiecutter.package_name }}/"]

[tool.hatch.build.targets.wheel]
packages = ["src/{{ cookiecutter.package_name }}/"]

[[tool.hatch.build.hooks.hatch-c.extensions]]
name = "{{ cookiecutter.package_name }}.replace_with_c_module_name"
sources = ["src/**/*.c"]
include-dirs = ["src/"]
extra-compile-args = ["-O2"]
define-macros = []
undef-macros = []
py-limited-api = "cp39"
{%- endif %}
{%- elif cookiecutter.python_build_backend == "setuptools" %}
[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]"]
build-backend = "setuptools.build"

[tool.setuptools_scm]
{%- endif %}

[project]
name = "{{ cookiecutter.package_name }}"
description = "{{ cookiecutter.project_description }}"
license-files = ["LICENSE"]
authors = [
  { name = "STScI" },
]
classifiers = [
  "Topic :: Scientific/Engineering :: Astronomy",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]
dynamic = ["version"]
requires-python = "{{ cookiecutter.python_version }}"
dependencies = []

[dependency-groups]
test = ["pytest{%- if cookiecutter.python_version.split('=')[1].split('.')[1]|int >= 10 -%}>=9{%- endif -%}"]
docs = ["numpydoc", "sphinx", "sphinx-automodapi", "sphinx-rtd-theme"]

[project.urls]
repository = "{{ cookiecutter.repository_url }}"

[tool.cruft]
skip = ["**/__init__.py", "tests/*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # Pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "UP", # pyupgrade
]

[tool.pytest{%- if cookiecutter.python_version.split('=')[1].split('.')[1]|int < 10 -%}.ini_options{%- endif -%}]
minversion = "9"

[tool.coverage.run]
branch = true
parallel = true
source = ["src/", "tests/"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 50
exclude_also = [
  "if TYPE_CHECKING:",
  "if typing.TYPE_CHECKING:",
  "@overload",
  "@typing.overload",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
  "raise NotImplementedError",
  "\\.\\.\\.",
]

[tool.uv]
default-groups = ["check", "test", "docs"]

