[project]
name = "{{ cookiecutter.package_name }}"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
requires-python = "{{ cookiecutter.python_version }}"
license-files = ["LICENSE"]
authors = [{ name = "STScI" }]
classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = []
dynamic = ["version"]

[project.urls]
{%- if cookiecutter.publish_docs_to == 'readthedocs.io' %}
documentation = "https://{{ cookiecutter.package_name }}.readthedocs.io"
{%- elif cookiecutter.publish_docs_to == 'github.io' %}
documentation = "https://spacetelescope.github.io/{{ cookiecutter.package_name }}"
{%- endif %}
repository = "{{ cookiecutter.repository_url }}"

[project.optional-dependencies]
docs = ["numpydoc", "sphinx", "sphinx-automodapi", "sphinx-rtd-theme"]
test = [
  "pytest{%- if cookiecutter.python_version.split('=')[1].split('.')[1]|int >= 10 -%}>=9{%- endif -%}"
]

[build-system]
{%- if cookiecutter.python_build_backend == "hatchling" %}
requires = [
  "hatch-vcs",
  "hatchling>=1.20",
]
build-backend = "hatchling.build"
{%- elif cookiecutter.python_build_backend == "setuptools" %}
requires = ["setuptools>=61.2", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"
{%- endif %}

[tool.coverage.run]
branch = true
parallel = true
source = ["src/", "tests/"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 50
exclude_also = [
  "if TYPE_CHECKING:",
  "if typing.TYPE_CHECKING:",
  "@overload",
  "@typing.overload",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
  "raise NotImplementedError",
  "\\.\\.\\.",
]

[tool.cruft]
skip = ["**/__init__.py", "tests/*"]

{%- if cookiecutter.python_build_backend == "hatchling" %}
[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "release-branch-semver"
{%- endif %}

[tool.pytest{%- if cookiecutter.python_version.split('=')[1].split('.')[1]|int < 10 -%}.ini_options{%- endif -%}]
minversion = "9"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # Pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "UP",  # pyupgrade
]

{%- if cookiecutter.python_build_backend == "setuptools" %}
[tool.setuptools_scm]
{%- endif %}
